Removed the upload Img from the staff view

--- a/frontend/STAFF VIEW/studentProfile.html
+++ b/frontend/STAFF VIEW/studentProfile.html
@@ -43,16 +43,16 @@
 
                     </div>
                     <div class="uploadBox" id="uploadTrigger">
-                        <div class="imgBox">
+                        <!-- <div class="imgBox">
                             <img src="./assets/Vector copy 2.png" alt="">
 
-                        </div>
-                        <div class="txtBox">
+                        </div> -->
+                        <!-- <div class="txtBox">
                             Click to change Image
-                        </div>
+                        </div> -->
                     </div>
-                    <input type="file" id="selectImage" accept="image/*">
-
+                    <!-- <input type="file" id="selectImage" accept="image/*"> -->
+                    <!-- REMOVED UPLOAD FIELD FOR STAFF VIEW -->
                 </div>
                 <div class="nameInterest">
                     <div class="johnDoe">
