Upload picture edit because uploaded picture was skewing

--- a/frontend/HR VIEW/hrGrid.html
+++ b/frontend/HR VIEW/hrGrid.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Students Grid</title>
     <link rel="stylesheet" href="./styles/hrGrid.css">
     <script src="./scripts/jQuery v3.7.1.js"></script>
 </head>
