Update search functionality and improve user data handling in login

--- a/frontend/HR VIEW/hrGrid.html
+++ b/frontend/HR VIEW/hrGrid.html
@@ -37,11 +37,11 @@
                         <img src="./assets/Icons (22).svg" alt="">
                     </div>
                     <div class="searchInputContain">
-                        <input type="text" placeholder="Search">
+                        <input id="searchInput" type="text" placeholder="Search by name...">
                     </div>
 
                 </div>
-                <div class="searchBtn">
+                <div class="searchBtn" id="searchBtn">
                     Search
 
                 </div>
