Refactor student grid and profile scripts; consolidate functionality and improve structure

--- a/frontend/STAFF VIEW/homeGrid.html
+++ b/frontend/STAFF VIEW/homeGrid.html
@@ -982,6 +982,7 @@
     </section>
     <script src="./scripts/homeGrid.js"></script>
     <script src="./routes/homeRoutes.js"></script>
+    <script src="./scripts/backend/studentGrid.js"></script>
 </body>
 
 </html>
