Refactor login redirection and integrate student calendar functionality; remove obsolete files and add new scripts

--- a/frontend/USER VIEW/studentProfile.html
+++ b/frontend/USER VIEW/studentProfile.html
@@ -166,6 +166,7 @@
   <!-- ========================== SCRIPTS ========================== -->
   <script src="./scripts/studentProfile.js"></script>
   <script src="./routes/homeRoutes.js"></script>
+  <script src="./backend/studentProfile.js"></script>
 
 </body>
 </html>
