--- a/frontend/STAFF VIEW/studentProfile.html
+++ b/frontend/STAFF VIEW/studentProfile.html
@@ -81,49 +81,98 @@
         <!-- ------------------Info Section---------- -->
         <div class="majorContainer">
             <div class="personInfo">
-                <div class="infoTitle">
-                    Internship Information
+                <div class="titleEdit">
+                    <div class="infoTitle">
+                        BIODATA
 
+                    </div>
                 </div>
-                <div class="infoBody">
-                    <div class="halfInfo">
-                        <div class="infoLabel">
-                            Unit
+
+                <div class="infoBodyContain">
+                    <div class="infoBody">
+                        <div class="halfInfo">
+                            <div class="infoLabel">
+                                Full Name
+                            </div>
+                            <div class="infoData">
+                                John Doe
+                            </div>
+
                         </div>
-                        <div class="infoData">
-                            IT
+                        <div class="halfInfo">
+                            <div class="infoLabel">
+                                Institution
+                            </div>
+                            <div class="infoData">
+                                Trevor High School
+                            </div>
                         </div>
 
                     </div>
-                    <div class="halfInfo">
-                        <div class="infoLabel">
-                            Area Of Interest
-                        </div>
-                        <div class="infoData">
-                            UI/UX Design
-                        </div>
-                    </div>
+                    <div class="infoBody">
+                        <div class="halfInfo">
+                            <div class="infoLabel">
+                                Course Of Study
+                            </div>
+                            <div class="infoData">
+                                Computer Science
+                            </div>
 
+                        </div>
+                        <div class="halfInfo">
+                            <div class="infoLabel">
+                                Email Address
+                            </div>
+                            <div class="infoData">
+                                tranute@gmail.com
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
-                <div class="infoBody">
-                    <div class="halfInfo">
-                        <div class="infoLabel">
-                            Start Date
-                        </div>
-                        <div class="infoData">
-                            01/05/2025
-                        </div>
-                    </div>
-                    <div class="halfInfo">
-                        <div class="infoLabel">
-                        End Date
-                        </div>
-                        <div class="infoData">
-                            01/11/2025
-                        </div>
-                    </div>
+                <div class="infoBodyContain">
+                    <div class="infoBody">
+                        <div class="halfInfo">
+                            <div class="infoLabel">
+                                Contact
+                            </div>
+                            <div class="infoData">
+                                0912345678
+                            </div>
 
+                        </div>
+                        <div class="halfInfo">
+                            <div class="infoLabel">
+                                Unit
+                            </div>
+                            <div class="infoData">
+                                IT
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="infoBody">
+                        <div class="halfInfo">
+                            <div class="infoLabel">
+                                Area Of Interest
+                            </div>
+                            <div class="infoData">
+                                UI/UX Design
+                            </div>
+
+                        </div>
+                        <div class="halfInfo">
+                            <div class="infoLabel">
+                                Start Date
+                            </div>
+                            <div class="infoData">
+                                01/05/2025
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
+
                 <div class="infoBody">
                     <div class="halfInfo">
                         <div class="infoLabel">
@@ -143,70 +192,7 @@
                     </div>
                 </div>
             </div>
-            <div class="personInfo">
-                <div class="infoTitle">
-                    Personal Information
 
-                </div>
-                <div class="infoBody">
-                    <div class="halfInfo">
-                        <div class="infoLabel">
-                            First Name
-                        </div>
-                        <div class="infoData">
-                            John 
-                        </div>
-
-                    </div>
-                    <div class="halfInfo">
-                        <div class="infoLabel">
-                            Last Name
-                        </div>
-                        <div class="infoData">
-                            Doe
-                        </div>
-                    </div>
-
-                </div>
-                <div class="infoBody">
-                    <div class="halfInfo">
-                        <div class="infoLabel">
-                            Conatct
-                        </div>
-                        <div class="infoData">
-                            0801235678
-                        </div>
-                    </div>
-                    <div class="halfInfo">
-                        <div class="infoLabel">
-                        Email Address
-                        </div>
-                        <div class="infoData">
-                            tranute@gmail.com
-                        </div>
-                    </div>
-
-                </div>
-                <div class="infoBody">
-                    <div class="halfInfo">
-                        <div class="infoLabel">
-                            Course Of Study
-                        </div>
-                        <div class="infoData">
-                            Computer Science
-                        </div>
-                    </div>
-                    <div class="halfInfo">
-                        <div class="infoLabel">
-                            Institution
-                        </div>
-                        <div class="infoData">
-                            Trevor High School
-                        </div>
-                    </div>
-                </div>
-
-            </div>
 
         </div>
 
