--- a/frontend/HR VIEW/hrstudentProfile.html
+++ b/frontend/HR VIEW/hrstudentProfile.html
@@ -64,7 +64,7 @@
 
                 </div>
                 <div class="bioBody">
-                    My name is Lucy. I’m a 300 level Computer science student from the University of Uyo. 
+                    My name is Lucy. I’m a 300 level Computer science student from the University of Uyo.
                     My hobbies are coding, reading and exercising. My area of interest is Web development.
 
                 </div>
@@ -76,49 +76,292 @@
         <!-- ------------------Info Section---------- -->
         <div class="majorContainer">
             <div class="personInfo">
-                <div class="infoTitle">
-                    Internship Information
+                <div class="titleEdit">
+                    <div class="infoTitle">
+                        BIODATA
+
+                    </div>
+                    <div class="editBio" id="editBio">
+                        Edit
+                    </div>
+                </div>
+                <!-- ----------Add student Modal-------- -->
+                <div class="overlay" id="overlay">
+                    <div class="addModal" id="addStudentModal">
+                        <div class="modalHead">
+                            <div class="headText">
+                                New Student
+                            </div>
+                            <div class="closeBox">
+                                <img src="./assets/close-circle.svg" alt="" id="closeModal">
+                            </div>
+                        </div>
+
+                        <div class="studentInfo">
+                            <div class="NameFieldContain">
+                                <div class="NameFieldText">
+                                    Name:
+                                </div>
+                                <div class="NameFieldInput">
+                                    <input type="text" id="studentName">
+                                </div>
+
+                            </div>
+                            <div class="NameFieldContain">
+                                <div class="NameFieldText">
+                                    Institution:
+                                </div>
+                                <div class="NameFieldInput">
+                                    <input type="text" id="studentInstitution">
+
+                                </div>
+
+                            </div>
+                            <div class="levelContain">
+                                <div class="NameFieldContain2">
+                                    <div class="NameFieldText2">
+                                        Level:
+                                    </div>
+                                    <div class="NameFieldInput2">
+                                        <input type="text" id="studentLevel">
+
+                                    </div>
+
+
+                                </div>
+                                <div class="genderGroup">
+                                    <label class="customRadio">
+                                        <input type="radio" name="gender" value="male">
+                                        <span class="radioCircle"></span>
+                                        Male
+                                    </label>
+                                    <label class="customRadio">
+                                        <input type="radio" name="gender" value="female">
+                                        <span class="radioCircle"></span>
+                                        Female
+                                    </label>
+                                </div>
+
+                            </div>
+
+
+                            <div class="NameFieldContain">
+                                <div class="NameFieldText">
+                                    Course of Study:
+                                </div>
+                                <div class="NameFieldInput">
+                                    <input type="text" id="studentCourse">
+
+                                </div>
+
+                            </div>
+                            <div class="NameFieldContain">
+                                <div class="NameFieldText">
+                                    Duration:
+                                </div>
+                                <div class="NameFieldInput">
+                                    <input type="text" id="studentDuration" placeholder="6 Months">
+
+                                </div>
+
+                            </div>
+                            <div class="NameFieldContain">
+                                <div class="NameFieldText">
+                                    Interest:
+                                </div>
+                                <div class="NameFieldInput">
+                                    <input type="text" id="studentInterest" placeholder="UI/UX">
+
+                                </div>
+
+                            </div>
+                            <div class="NameFieldContain">
+                                <div class="NameFieldText">
+                                    Unit:
+                                </div>
+                                <div class="NameFieldInput" id="unitDisplay">
+                                    <input type="text" id="studentUnit" readonly>
+                                </div>
+                                <div class="caretdown" id="caretdown">
+                                    <img src="./assets/CaretDown.svg" alt="">
+                                </div>
+
+                                <!-- ----------Unit dropdown -->
+                                <div class="unitDrop" id="unitDrop">
+                                    <div class="unitLIst">
+                                        Information Technology
+                                    </div>
+                                    <div class="unitLIst">
+                                        Communications
+                                    </div>
+                                    <div class="unitLIst">
+                                        Strategic Information
+                                    </div>
+                                    <div class="unitLIst">
+                                        Human Resources
+                                    </div>
+                                    <div class="unitLIst">
+                                        Administration
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="NameFieldContain">
+                                <div class="NameFieldText">
+                                    Supervisor:
+                                </div>
+                                <div class="NameFieldInput">
+                                    <input type="text" id="studentSupervisor" readonly>
+                                </div>
+                            </div>
+
+                            <div class="NameFieldContain">
+                                <div class="NameFieldText">
+                                    Email:
+                                </div>
+                                <div class="NameFieldInput">
+                                    <input type="email" id="studentEmail">
+                                </div>
+                            </div>
+
+                            <div class="NameFieldContain">
+                                <div class="NameFieldText">
+                                    Password:
+                                </div>
+                                <div class="NameFieldInput">
+                                    <input type="password" id="studentPassword">
+                                </div>
+                            </div>
+
+                            <div class="NameFieldContain">
+                                <div class="NameFieldText">
+                                    Confirm Password:
+                                </div>
+                                <div class="NameFieldInput">
+                                    <input type="password" id="studentConfirmPassword">
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="saveBtn" id="saveBtn">
+                            Save
+                        </div>
+                    </div>
+                </div>
+                <!-- -------------End of modal--------- -->
+
+                <!-- ---------- Mini Success Modal------------ -->
+                <div class="overlay3" id="overlay3">
+                    <div class="successModal" id="successModal">
+                        <div class="modalHead3">
+                            <div class="headText2">
+                                Success!
+                            </div>
+
+                        </div>
+                        <div class="modalBody">
+                            <div class="successImg">
+                                <img src="./assets/Vector copy 3.png" alt="">
+                            </div>
+                            <div class="successTxt">
+                                Success!
+                            </div>
+
+                        </div>
+                        <div class="modalFooter">
+                            <div class="okayBtn" id="okayBtn">
+                                Okay
+                            </div>
+                        </div>
+                    </div>
 
                 </div>
-                <div class="infoBody">
-                    <div class="halfInfo">
-                        <div class="infoLabel">
-                            Unit
+
+                <div class="infoBodyContain">
+                    <div class="infoBody">
+                        <div class="halfInfo">
+                            <div class="infoLabel">
+                                Full Name
+                            </div>
+                            <div class="infoData">
+                                John Doe
+                            </div>
+
                         </div>
-                        <div class="infoData">
-                            IT
+                        <div class="halfInfo">
+                            <div class="infoLabel">
+                                Institution
+                            </div>
+                            <div class="infoData">
+                                Trevor High School
+                            </div>
                         </div>
 
                     </div>
-                    <div class="halfInfo">
-                        <div class="infoLabel">
-                            Area Of Interest
-                        </div>
-                        <div class="infoData">
-                            UI/UX Design
-                        </div>
-                    </div>
+                    <div class="infoBody">
+                        <div class="halfInfo">
+                            <div class="infoLabel">
+                                Course Of Study
+                            </div>
+                            <div class="infoData">
+                                Computer Science
+                            </div>
 
+                        </div>
+                        <div class="halfInfo">
+                            <div class="infoLabel">
+                                Email Address
+                            </div>
+                            <div class="infoData">
+                                tranute@gmail.com
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
-                <div class="infoBody">
-                    <div class="halfInfo">
-                        <div class="infoLabel">
-                            Start Date
-                        </div>
-                        <div class="infoData">
-                            01/05/2025
-                        </div>
-                    </div>
-                    <div class="halfInfo">
-                        <div class="infoLabel">
-                        End Date
-                        </div>
-                        <div class="infoData">
-                            01/11/2025
-                        </div>
-                    </div>
+                <div class="infoBodyContain">
+                    <div class="infoBody">
+                        <div class="halfInfo">
+                            <div class="infoLabel">
+                                Contact
+                            </div>
+                            <div class="infoData">
+                                0912345678
+                            </div>
 
+                        </div>
+                        <div class="halfInfo">
+                            <div class="infoLabel">
+                                Unit
+                            </div>
+                            <div class="infoData">
+                                IT
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="infoBody">
+                        <div class="halfInfo">
+                            <div class="infoLabel">
+                                Area Of Interest
+                            </div>
+                            <div class="infoData">
+                                UI/UX Design
+                            </div>
+
+                        </div>
+                        <div class="halfInfo">
+                            <div class="infoLabel">
+                                Start Date
+                            </div>
+                            <div class="infoData">
+                                01/05/2025
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
+
                 <div class="infoBody">
                     <div class="halfInfo">
                         <div class="infoLabel">
@@ -138,70 +381,64 @@
                     </div>
                 </div>
             </div>
-            <div class="personInfo">
-                <div class="infoTitle">
-                    Personal Information
+            <div class="deactivateBtn" id="deactivate">
+                Deactivate
+            </div>
 
+            <!-- ------Mini Modal----- -->
+            <div class="overlay2" id="overlay2">
+                <div class="confirmModal" id="confirmModal">
+                    <div class="modalHead2">
+                        <div class="headText2">
+                            Confirm Deactivation
+
+                        </div>
+                        <div class="closeBox">
+                            <img src="./assets/close-circle.svg" alt="" id="closeDeactivateModal">
+
+                        </div>
+
+                    </div>
+                    <div class="confirmTxt">
+                        Are you sure you want to deactivate this student?
+                    </div>
+                    <div class="confirmBtnContain">
+                        <div class="cancelBtn" id="cancelBtn">
+                            Cancel
+                        </div>
+                        <div class="proceedBtn" id="proceedBtn">
+                            Proceed
+                        </div>
+                    </div>
                 </div>
-                <div class="infoBody">
-                    <div class="halfInfo">
-                        <div class="infoLabel">
-                            First Name
-                        </div>
-                        <div class="infoData">
-                            John 
+            </div>
+            <!-- ---------- Mini Success Modal------------ -->
+            <div class="overlay4" id="overlay4">
+                <div class="successModal2" id="successModal2">
+                    <div class="modalHead4">
+                        <div class="headText2">
+                            Deactivated!
                         </div>
 
                     </div>
-                    <div class="halfInfo">
-                        <div class="infoLabel">
-                            Last Name
+                    <div class="modalBody">
+                        <div class="successImg">
+                            <img src="./assets/Vector copy 4.png" alt="">
                         </div>
-                        <div class="infoData">
-                            Doe
+                        <div class="successTxt">
+                            You’ve successfully deactivated this student.
                         </div>
-                    </div>
 
-                </div>
-                <div class="infoBody">
-                    <div class="halfInfo">
-                        <div class="infoLabel">
-                            Conatct
-                        </div>
-                        <div class="infoData">
-                            0801235678
-                        </div>
                     </div>
-                    <div class="halfInfo">
-                        <div class="infoLabel">
-                        Email Address
-                        </div>
-                        <div class="infoData">
-                            tranute@gmail.com
-                        </div>
-                    </div>
-
-                </div>
-                <div class="infoBody">
-                    <div class="halfInfo">
-                        <div class="infoLabel">
-                            Course Of Study
-                        </div>
-                        <div class="infoData">
-                            Computer Science
-                        </div>
-                    </div>
-                    <div class="halfInfo">
-                        <div class="infoLabel">
-                            Institution
-                        </div>
-                        <div class="infoData">
-                            Trevor High School
+                    <div class="modalFooter">
+                        <div class="okayBtn2" id="okayBtn2">
+                            Okay
                         </div>
                     </div>
                 </div>
 
             </div>
+
 
         </div>
 
