--- a/frontend/HR VIEW/hrstudentProfile.html
+++ b/frontend/HR VIEW/hrstudentProfile.html
@@ -444,6 +444,7 @@
 
     </section>
     <script src="./scripts/hrstudentProfile.js"></script>
+    <script src="./scripts/backend/studentProfile.js"></script>
     <script src="./routes/hrDashRoute.js"></script>
 </body>
 
