Added functionality to edit and deactivate on hrGrid

--- a/frontend/HR VIEW/hrGrid.html
+++ b/frontend/HR VIEW/hrGrid.html
@@ -81,13 +81,154 @@
                         </div>
                         <!-- ----------Edit/Delete Modal---------- -->
                         <div class="editModal">
-                            <div class="edit">
-                                Deactivate
-                            </div>
+
                             <div class="delete">
-                                Delete
+                                Edit
 
                             </div>
+                            <div class="deactivate">
+                                Deactivate
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="cardPhoto">
+                        <div class="studentPhoto">
+                            <img src="./assets/johndoe.png" alt="">
+
+                        </div>
+
+                    </div>
+                    <div class="nameInfoContain">
+                        <div class="nameInfo">
+                            John Doe
+                        </div>
+                        <div class="majorInfo">
+                            UI/Ux Design
+                        </div>
+                    </div>
+                    <div class="majorInfoContain">
+                        <div class="uniContain">
+                            <div class="uniIcon">
+                                <img src="./assets/Student.png" alt="">
+                            </div>
+                            <div class="Uni">
+                                Yale University
+                            </div>
+
+                        </div>
+                        <div class="uniContain">
+                            <div class="uniIcon">
+                                <img src="./assets/GraduationCap.png" alt="">
+                            </div>
+                            <div class="Uni">
+                                400L
+                            </div>
+
+                        </div>
+                        <div class="uniContain">
+                            <div class="uniIcon">
+                                <img src="./assets/Clock.png" alt="">
+                            </div>
+                            <div class="Uni">
+                                6 Months
+                            </div>
+
+                        </div>
+                        <div class="uniContain">
+                            <div class="uniIcon">
+                                <img src="./assets/Vector.png" alt="">
+                            </div>
+                            <div class="Uni">
+                                johndoe@gmail.com
+                            </div>
+
+                        </div>
+
+                    </div>
+                    <div class="cardFooter">
+                        <div class="dateJoined">
+                            Joined on 24 March, 2025
+                        </div>
+                        <div class="viewDetails">
+                            View Details
+                            <img src="./assets/CaretRight.png" alt="">
+                        </div>
+
+                    </div>
+
+                </div>
+                <!-- ------Mini Modal----- -->
+                <div class="overlay2" id="overlay2">
+                    <div class="confirmModal" id="confirmModal">
+                        <div class="modalHead2">
+                            <div class="headText2">
+                                Confirm Deactivation
+
+                            </div>
+                            <div class="closeBox">
+                                <img src="./assets/close-circle.svg" alt="" id="closeDeactivateModal">
+
+                            </div>
+
+                        </div>
+                        <div class="confirmTxt">
+                            Are you sure you want to deactivate this student?
+                        </div>
+                        <div class="confirmBtnContain">
+                            <div class="cancelBtn" id="cancelBtn">
+                                Cancel
+                            </div>
+                            <div class="proceedBtn" id="proceedBtn">
+                                Proceed
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- ---------- Mini Success Modal------------ -->
+                <div class="overlay4" id="overlay4">
+                    <div class="successModal2" id="successModal2">
+                        <div class="modalHead4">
+                            <div class="headText2">
+                                Deactivated!
+                            </div>
+
+                        </div>
+                        <div class="modalBody">
+                            <div class="successImg">
+                                <img src="./assets/Vector copy 4.png" alt="">
+                            </div>
+                            <div class="successTxt">
+                                You’ve successfully deactivated this student.
+                            </div>
+
+                        </div>
+                        <div class="modalFooter">
+                            <div class="okayBtn2" id="okayBtn2">
+                                Okay
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="studentsCard">
+                    <div class="cardHead">
+                        <div class="status">
+                            Present
+
+                        </div>
+                        <div class="dotsThree">
+                            <img src="./assets/DotsThree.png" alt="">
+                        </div>
+                        <!-- ----------Edit/Delete Modal---------- -->
+                        <div class="editModal">
+                            <div class="delete">
+                                Edit
+                            </div>
+                            <div class="deactivate">
+                                Deactivate
+                            </div>
+
                         </div>
                     </div>
                     <div class="cardPhoto">
@@ -167,98 +308,11 @@
                         </div>
                         <!-- ----------Edit/Delete Modal---------- -->
                         <div class="editModal">
-                            <div class="edit">
-                                Deactivate
-                            </div>
                             <div class="delete">
-                                Delete
-
+                                Edit
                             </div>
-                        </div>
-                    </div>
-                    <div class="cardPhoto">
-                        <div class="studentPhoto">
-                            <img src="./assets/johndoe.png" alt="">
-
-                        </div>
-
-                    </div>
-                    <div class="nameInfoContain">
-                        <div class="nameInfo">
-                            John Doe
-                        </div>
-                        <div class="majorInfo">
-                            UI/Ux Design
-                        </div>
-                    </div>
-                    <div class="majorInfoContain">
-                        <div class="uniContain">
-                            <div class="uniIcon">
-                                <img src="./assets/Student.png" alt="">
-                            </div>
-                            <div class="Uni">
-                                Yale University
-                            </div>
-
-                        </div>
-                        <div class="uniContain">
-                            <div class="uniIcon">
-                                <img src="./assets/GraduationCap.png" alt="">
-                            </div>
-                            <div class="Uni">
-                                400L
-                            </div>
-
-                        </div>
-                        <div class="uniContain">
-                            <div class="uniIcon">
-                                <img src="./assets/Clock.png" alt="">
-                            </div>
-                            <div class="Uni">
-                                6 Months
-                            </div>
-
-                        </div>
-                        <div class="uniContain">
-                            <div class="uniIcon">
-                                <img src="./assets/Vector.png" alt="">
-                            </div>
-                            <div class="Uni">
-                                johndoe@gmail.com
-                            </div>
-
-                        </div>
-
-                    </div>
-                    <div class="cardFooter">
-                        <div class="dateJoined">
-                            Joined on 24 March, 2025
-                        </div>
-                        <div class="viewDetails">
-                            View Details
-                            <img src="./assets/CaretRight.png" alt="">
-                        </div>
-
-                    </div>
-
-                </div>
-                <div class="studentsCard">
-                    <div class="cardHead">
-                        <div class="status">
-                            Present
-
-                        </div>
-                        <div class="dotsThree">
-                            <img src="./assets/DotsThree.png" alt="">
-                        </div>
-                        <!-- ----------Edit/Delete Modal---------- -->
-                        <div class="editModal">
-                            <div class="edit">
+                            <div class="deactivate">
                                 Deactivate
-                            </div>
-                            <div class="delete">
-                                Delete
-
                             </div>
                         </div>
 
@@ -340,12 +394,11 @@
                         </div>
                         <!-- ----------Edit/Delete Modal---------- -->
                         <div class="editModal">
-                            <div class="edit">
-                                Deactivate
-                            </div>
                             <div class="delete">
-                                Delete
-
+                                Edit
+                            </div>
+                            <div class="deactivate">
+                                Deactivate
                             </div>
                         </div>
                     </div>
@@ -435,13 +488,13 @@
                         </div>
                         <!-- ----------Edit/Delete Modal---------- -->
                         <div class="editModal">
-                            <div class="edit">
+                            <div class="delete">
+                                Edit
+                            </div>
+                            <div class="deactivate">
                                 Deactivate
                             </div>
-                            <div class="delete">
-                                Delete
 
-                            </div>
                         </div>
                     </div>
                     <div class="cardPhoto">
@@ -521,13 +574,13 @@
                         </div>
                         <!-- ----------Edit/Delete Modal---------- -->
                         <div class="editModal">
-                            <div class="edit">
+                            <div class="delete">
+                                Edit
+                            </div>
+                            <div class="deactivate">
                                 Deactivate
                             </div>
-                            <div class="delete">
-                                Delete
 
-                            </div>
                         </div>
                     </div>
                     <div class="cardPhoto">
@@ -607,13 +660,13 @@
                         </div>
                         <!-- ----------Edit/Delete Modal---------- -->
                         <div class="editModal">
-                            <div class="edit">
+                            <div class="delete">
+                                Edit
+                            </div>
+                            <div class="deactivate">
                                 Deactivate
                             </div>
-                            <div class="delete">
-                                Delete
 
-                            </div>
                         </div>
                     </div>
                     <div class="cardPhoto">
@@ -693,13 +746,13 @@
                         </div>
                         <!-- ----------Edit/Delete Modal---------- -->
                         <div class="editModal">
-                            <div class="edit">
+                            <div class="delete">
+                                Edit
+                            </div>
+                            <div class="deactivate">
                                 Deactivate
                             </div>
-                            <div class="delete">
-                                Delete
 
-                            </div>
                         </div>
 
                     </div>
@@ -1075,6 +1128,7 @@
                 </div>
 
             </div>
+
 
 
         </div>
