--- a/frontend/STAFF VIEW/log.html
+++ b/frontend/STAFF VIEW/log.html
@@ -13,6 +13,15 @@
     <nav class="header">
         <div class="logoContain">
             <img src="./assets/24388.svg" alt="">
+        </div>
+        <div class="forMobile">
+            <div class="navHeadName">
+                John Doe
+            </div>
+            <div class="navImg">
+                <img src="./assets/johndoe.png" alt="">
+            </div>
+        </div>
     </nav>
     <section class="bodyContain">
         <div class="heading">
@@ -74,6 +83,61 @@
                 </div>
                 <div class="checkBox">
                     <img src="./assets/CheckCircle.svg" alt="">
+                </div>
+            </div>
+
+        </div>
+        <div class="activeBtnMobile">
+            <div class="monthContain" id="monthContain">
+                <div class="caretDown">
+                    <img src="./assets/CaretDown.svg" alt="">
+
+                </div>
+                <div class="month1">
+                    Month 1
+                </div>
+
+            </div>
+            <div class="dropdownMonths" id="dropdownMonths">
+                <div class="dropped">
+                    Month 1
+                </div>
+                <div class="dropped">
+                    Month 2
+                </div>
+                <div class="dropped">
+                    Month 3
+                </div>
+                <div class="dropped">
+                    Month 4
+                </div>
+                <div class="dropped">
+                    Month 5
+                </div>
+                <div class="dropped">
+                    Month 6
+                </div>
+            </div>
+            <div class="weekContain">
+                <div class="week1Cont">
+                    <p>
+                        Week 1
+                    </p>
+                </div>
+                <div class="week1Cont">
+                    <p>
+                        Week 2
+                    </p>
+                </div>
+                <div class="week1Cont">
+                    <p>
+                        Week 3
+                    </p>
+                </div>
+                <div class="week1Cont">
+                    <p>
+                        Week 4
+                    </p>
                 </div>
             </div>
 
@@ -188,7 +252,7 @@
                     </div>
                 </div>
                 <div class="activeWeek">
-                    <div class="weekHead">
+                    <div class="weekHead" id="weekHead">
                         Week 1
                     </div>
                     <div class="weekLabel">
@@ -223,7 +287,7 @@
                             dd/mm/yy
                         </div>
                         <div class="workData">
-                            I designed a login page. 
+                            I designed a login page.
                         </div>
 
                     </div>
@@ -236,7 +300,7 @@
                         </div>
                         <div class="workData">
                             I attended a teams meeting where i learnt a lot.
-                            I also had a GIS training session where i designed 3 maps. 
+                            I also had a GIS training session where i designed 3 maps.
                         </div>
 
                     </div>
@@ -248,7 +312,7 @@
                             dd/mm/yy
                         </div>
                         <div class="workData">
-                            I crimped 50 cables and assisted in troubleshooting 500 Scanners. 
+                            I crimped 50 cables and assisted in troubleshooting 500 Scanners.
                         </div>
 
                     </div>
@@ -260,26 +324,104 @@
                             dd/mm/yy
                         </div>
                         <div class="workData">
-                            I attended the weekly IT meeting. 
+                            I attended the weekly IT meeting.
                         </div>
 
                     </div>
-                    <div class="commentContain">
-                        <div class="superLabel">
-                            Supervisor's Comment
+                    <div class="accordion">
+                        <!-- Accordion Item -->
+                        <div class="accordionItem">
+                            <div class="accordionHeader">
+                                <div class="mobileDay1">Monday</div>
+                                <div class="caretDown2">
+                                    <img src="./assets/CaretDown.svg" alt="">
+                                </div>
+                            </div>
+                            <div class="accordionContent">
+                                <div class="date">dd/mm/yy</div>
+                                <div class="activity">I crimped 50 cables and assisted in troubleshooting 500 CCTV's.
+                                </div>
+                            </div>
                         </div>
-                        <div class="actualComment">
-                            She is a fast learner and she’s making good progress. 
-                            She is a fast learner and she’s making good progress.
+                        <!-- Accordion Item -->
+                        <div class="accordionItem">
+                            <div class="accordionHeader">
+                                <div class="mobileDay1">Tuesday</div>
+                                <div class="caretDown2">
+                                    <img src="./assets/CaretDown.svg" alt="">
+                                </div>
+                            </div>
+                            <div class="accordionContent">
+                                <div class="date">dd/mm/yy</div>
+                                <div class="activity">I crimped 50 cables and assisted in troubleshooting 500 CCTV's.
+                                </div>
+                            </div>
                         </div>
-                        <div class="signature">
-                            <img src="./assets/Vector.svg" alt="">
+                        <!-- Accordion Item -->
+                        <div class="accordionItem">
+                            <div class="accordionHeader">
+                                <div class="mobileDay1">Wednesday</div>
+                                <div class="caretDown2">
+                                    <img src="./assets/CaretDown.svg" alt="">
+                                </div>
+                            </div>
+                            <div class="accordionContent">
+                                <div class="date">dd/mm/yy</div>
+                                <div class="activity">I crimped 50 cables and assisted in troubleshooting 500 CCTV's.
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Accordion Item -->
+                        <div class="accordionItem">
+                            <div class="accordionHeader">
+                                <div class="mobileDay1">Thursday</div>
+                                <div class="caretDown2">
+                                    <img src="./assets/CaretDown.svg" alt="">
+                                </div>
+                            </div>
+                            <div class="accordionContent">
+                                <div class="date">dd/mm/yy</div>
+                                <div class="activity">I crimped 50 cables and assisted in troubleshooting 500 CCTV's.
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Accordion Item -->
+                        <div class="accordionItem">
+                            <div class="accordionHeader">
+                                <div class="mobileDay1">Friday</div>
+                                <div class="caretDown2">
+                                    <img src="./assets/CaretDown.svg" alt="">
+                                </div>
+                            </div>
+                            <div class="accordionContent">
+                                <div class="date">dd/mm/yy</div>
+                                <div class="activity">I crimped 50 cables and assisted in troubleshooting 500 CCTV's.
+                                </div>
+                            </div>
                         </div>
 
                     </div>
 
                 </div>
+
+
+
+                <div class="commentContain">
+                    <div class="superLabel">
+                        Supervisor's Comment
+                    </div>
+                    <div class="actualComment">
+                        She is a fast learner and she’s making good progress.
+                        She is a fast learner and she’s making good progress.
+                    </div>
+                    <div class="signature">
+                        <img src="./assets/Vector.svg" alt="">
+                    </div>
+
+                </div>
+
             </div>
+        </div>
 
         </div>
     </section>
