Added logout button and it's functionality

--- a/frontend/HR VIEW/hrDash.html
+++ b/frontend/HR VIEW/hrDash.html
@@ -14,6 +14,18 @@
         <div class="logoContain">
             <img src="./assets/24388.svg" alt="">
         </div>
+        <div class="logoutContain" id="logoutDropdown">
+            <div class="navName">
+                John Doe
+            </div>
+            <div class="navPic">
+                <img src="./assets/johndoe.png" alt="">
+
+            </div>
+        </div>
+        <div class="logoutDropdown" id="logout">
+            Logout
+        </div>
     </nav>
     <section class="bodyContain">
 
