--- a/frontend/STAFF VIEW/homeGrid.html
+++ b/frontend/STAFF VIEW/homeGrid.html
@@ -14,6 +14,9 @@
         <div class="logoContain">
             <img src="./assets/24388.svg" alt="">
         </div>
+        <div class="loginBtn" id="loginBtn">
+            Login
+        </div>
     </nav>
     <section class="bodyContain">
 
