--- a/frontend/staff-view/index.html
+++ b/frontend/staff-view/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="/frontend/staff-view/styles/homeGrid.css">
-    <script src="./frontend/staff-view/scripts/jQuery v3.7.1.js"></script>
+    <link rel="stylesheet" href="frontend/staff-view/styles/homeGrid.css">
+    <script src="frontend/staff-view/scripts/jQuery v3.7.1.js"></script>
 </head>
 
 <body>
